# forever_money_challenge

./: .gitignore  Anchor.toml  README.md  devnet_test_logs.txt  package-lock.json  package.json
programs/miner_vault/: Cargo.toml
programs/miner_vault/src/: lib.rs
tests/: miner_vault.ts
