[package]
name = "miner_vault"
version = "0.1.0"
description = "Permissioned liquidity vault for ForeverMoney (SN98)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "miner_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

